--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+        
+}
 body
 {
 background: #f2eded;
@@ -10,6 +15,7 @@ header
  background: #202020;
  color: white;
  padding:0.5em;
+ overflow: hidden;
     
 }
 
@@ -49,3 +55,127 @@ font-size: 1.2em;
     font-weight: normal;
     margin: 2em 70px 0 0  
 }
+
+nav
+{
+background: #63bcb8;
+box-shadow: rgba(0,0,0,0.5) 0px 2px 10px;
+padding: 0 0.5em;
+position: relative
+}
+
+nav ul li
+{
+display: inline-block;
+margin: 0 1em 0 0;
+padding: 0.5em 0 0.5em 0
+}
+
+nav ul li a
+{
+color: white;
+text-decoration: none;
+padding: 0 0.5em;
+}
+
+nav ul
+{
+list-style: none;
+margin: 0 80px 0 0;
+}
+
+nav ul #publicar
+{
+position: absolute;
+right: 0;
+top: 0;
+}
+
+nav ul #publicar a
+{
+background: #297571;
+border-radius: 5px;
+padding: 0.8em 0.5em;
+box-shadow: rgba(0,0,0,0.7) 5px 5px 10px;
+text-shadow: rgba(0,0,0,0.7) 5px 5px 10px;
+font-style: italic;
+    
+}
+
+#contenido
+{
+margin: 1em;   
+}
+
+#contenido .item
+{
+background: #fff;
+margin-bottom: 3em;
+border-bottom: solid #2e7476 3px;
+min-height: 130px;
+}
+
+#contenido .item .img_item img
+{
+width: 85px;
+    
+}
+
+#contenido .item .img_item
+{
+float: left;
+margin 0 1em 0 0;
+}
+
+#contenido .item .titulo_item
+{
+font-size: 1.2em;
+font-style: italic;
+color: #3e453e;
+padding: 0.8em 1em 0 0;
+    
+    
+}
+
+#contenido .item .autor_item
+{
+color: #ee2c28   
+}
+
+#contenido .item .info_item
+{
+color: #000000 
+}
+
+#contenido .item .autor_item a
+{
+color: blue;
+text-decoration: none;
+}
+
+#contenido .item .tag_item
+{
+background: #f56363;
+border-radius: 4px;
+padding: 0.1em 0.2em;
+box-shadow: rgba(0,0,0,0.7) 2px 2px 8px;
+text-shadow: rgba(0,0,0,0.7) 5px 5px 10px;
+font-style: italic;   
+color: white;
+}
+
+#contenido .item .tiempo
+{
+background: #e0e0e0;
+border-radius: 4px;
+padding: 0.1em 0.2em;
+box-shadow: rgba(0,0,0,0.7) 2px 2px 8px;
+text-shadow: rgba(0,0,0,0.7) 5px 5px 10px;
+font-style: italic;   
+color: white;
+position: right;
+
+}
+
+
+
